Fixed: wflow-consoleweb - List Builder - Long sample value is overlapped with the next column. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/dbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/dbuilder.css
@@ -9,9 +9,6 @@ body{
     width: 100%;
     min-width: min-content;
 }
-.dataList th, .dataList td:not(.footable-row-detail-cell){
-    white-space: nowrap;
-}
 .filters, actions {
     min-height: 35px;
 }
